All deperment's tamplete is done

--- a/public/electrical/pages/electrical.html
+++ b/public/electrical/pages/electrical.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CST Department</title>
-    <link rel="stylesheet" href="../css/cst_style.css">
+    <link rel="stylesheet" href="../../cst/css/cst_style.css">
     <link rel="stylesheet" href="../../tpi/css/nav.css">
 </head>
 
 <body>
     <nav> <a class="nav-logo"><img src="../../tpi/images/tpi.jpg" alt="Logo" height="55" width="55"></a> <a
-            href="../../home/home.html">Home</a> <a href="../../tpi/pages/about.html">About</a> <a>CST</a> <a
-            href="../../electrical/pages/electrical.html">Electrical</a> <a
+            href="../../home/home.html">Home</a> <a href="../../tpi/pages/about.html">About</a> <a
+            href="../../cst/pages/cst.html">CST</a> <a>Electrical</a> <a
             href="../../electronic/pages/electronics.html">Electronics</a> <a
             href="../../civil/pages/civil.html">Civil</a> <a
             href="../../mechanical/pages/mechanical.html">Mechanical</a> <a
@@ -20,10 +20,9 @@
             href="../../telecom/pages/telecom.html">Telecommunication</a> <a
             href="../../tpi/pages/teachersInfo.html">Teachers</a> <a href="../../tpi/pages/students.html">Students</a>
     </nav>
-    <div class="full_container"> <img class="bg-image" src="../img/s1.jpg" alt="Snow" style="width:100%;">
+    <div class="full_container"> <img class="bg-image" src="../img/et6.jpg" alt="Snow" style="width:100%;">
         <div class="centered">
-            <h1 class=".bg-text" style="text-shadow: 4px 4px 6px #000000;;"> Welcome to Computer Science & Technology
-            </h1>
+            <h1 class=".bg-text" style="text-shadow: 4px 4px 6px #000000;;"> Welcome to Electrical Technology </h1>
         </div>
     </div>
     <div class="about-section">
@@ -74,9 +73,15 @@
     <div style="text-align: center;">
         <h1> Deperment's Images </h1>
     </div>
-    <div id="cst_img" style="text-align: center;"> <img src="../img/Computer Lab.jpg" alt="Computer Lab"> <img
-            src="../img/hw.jpg" alt="Computer Lab"> <img src="../img/s1.jpg" alt="Computer Lab"> <img
-            src="../img/s2.jpg" alt="Computer Lab"> <img src="../img/s3.jpg" alt="Computer Lab"> </div>
+    <div id="cst_img" style="text-align: center;"> <img src="../img/Electrical Basic Lab.jpg" alt="Computer Lab"> <img
+            src="../img/Electrical Circuit Lab.jpg" alt="Computer Lab"> <img src="../img/em1.jpg" alt="Computer Lab">
+        <img src="../img/em3.jpg" alt="Computer Lab"> <img src="../img/em4.jpg" alt="Computer Lab"> <img
+            src="../img/et2.jpg" alt="Computer Lab"> <img src="../img/et3.jpg" alt="Computer Lab"> <img
+            src="../img/et4.jpg" alt="Computer Lab"> <img src="../img/et6.jpg" alt="Computer Lab"> <img
+            src="../img/et7.jpg" alt="Computer Lab"> <img src="../img/et8.jpg" alt="Computer Lab"> <img
+            src="../img/et8_0.jpg" alt="Computer Lab"> <img src="../img/et9.jpg" alt="Computer Lab"> <img
+            src="../img/IMG20181025143446.jpg" alt="Computer Lab"> <img src="../img/IMG20181025143657.jpg"
+            alt="Computer Lab"> <img src="../img/IMG20181025143736_1.jpg" alt="Computer Lab"> </div>
     <hr>
     <div style="text-align: center;">
         <h1>Teacher's of this Technology</h1>
@@ -91,7 +96,7 @@
             <div id="block-system-main" class="block block-system clearfix">
                 <div class="content">
                     <div class="view-content"> <iframe frameborder="0"
-                            src="https://rg-bd.com/tpi-teacher-list.php?t=1&amp;id=1"
+                            src="https://rg-bd.com/tpi-teacher-list.php?t=4&amp;id=1"
                             style="width:100%; height:2000px;"></iframe> </div>
                 </div>
             </div>
