--- a/public/home/home.html
+++ b/public/home/home.html
@@ -10,47 +10,30 @@
 </head>
 
 <body>
-    <nav>
-        <a class="nav-logo"><img src="../../tpi/images/tpi.jpg" alt="Logo" height="55" width="55"></a>
-        <a href="../../tpi/pages/about.html">About</a>
-        <a href="#">Electrical</a>
-        <a href="#">Civil</a>
-        <a href="#">Mechanical</a>
-        <a href="#">Construction</a>
-        <a href="#">Telecommunication</a>
-        <a href="../cst/pages/cst.html">CST</a>
-        <a href="../tpi/pages/teachersInfo.html">Teachers</a>
-        <a href="../tpi/pages/students.html">students</a>
-    </nav>
-
-    <div class="container">
-        <img class="bg-image" src="../../tpi/images/301777316_379201554417488_7513436252949869093_n.jpg" alt="Snow"
-            style="width:100%;">
+    <nav> <a class="nav-logo"><img src="../../tpi/images/tpi.jpg" alt="Logo" height="55" width="55"></a> <a>Home</a> <a
+            href="../../tpi/pages/about.html">About</a> <a href="../cst/pages/cst.html">CST</a> <a
+            href="../electrical/pages/electrical.html">Electrical</a> <a
+            href="../electronic/pages/electronics.html">Electronics</a> <a href="../civil/pages/civil.html">Civil</a> <a
+            href="../mechanical/pages/mechanical.html">Mechanical</a> <a
+            href="../constraction/pages/constraction.html">Construction</a> <a
+            href="../telecom/pages/telecom.html">Telecommunication</a> <a
+            href="../tpi/pages/teachersInfo.html">Teachers</a> <a href="../tpi/pages/students.html">Students</a> <a
+            href="../../tpi/pages/students.html">Students</a> </nav>
+    <div class="full_container"> <img class="bg-image"
+            src="../../tpi/images/301777316_379201554417488_7513436252949869093_n.jpg" alt="Snow" style="width:100%;">
         <div class="centered">
             <main>
-                <section class="about" style="text-align: center;">
-                    <br>
+                <section class="about" style="text-align: center;"> <br>
                     <h1 class="bg-text">About Us</h1>
-                    <hr>
-                    <br>
+                    <hr> <br>
                     <p>টাঙ্গাইল পলিটেকনিক ইনস্টিটিউট বাংলাদেশের টাঙ্গাইল জেলার একটি কারিগরি শিক্ষাপ্রতিষ্ঠান। এটি ১৯৯১
-                        সালে
-                        স্থাপিত হয়। এটি ১৯৯১ সালে প্রতিষ্ঠিত হয়। প্রথম বর্ষে মাত্র 40 জন ছাত্র-ছাত্রী নিয়ে ক্লাস শুরু
-                        হয়
-                        ইলেকট্রিক্যাল টেকনোলজিতে পরবর্তীতে এখানে আরো ৬টি কোর্স চালু করা হয়। বর্তমানে মোট ৭টি টেকনোলজি
-                        নিয়ে
-                        চলছে টাঙ্গাইল পলিটেকনিক ইনস্টিটিউট। উক্ত প্রতিষ্ঠানটি টাংগাইল এর নতুন বাসস্ট্যান্ড নামক জায়গা
-                        থেকে
-                        উত্তরে হেটে ৫ মিনিট দুরত্বে অবস্থিত। টাঙ্গাইল পলিটেকনিক ইনস্টিটিউট এর ছাত্রদের জন্য ১টি এবং
-                        ছাত্রীদের
-                        জন্য ১টি আবাসিক ছাত্রাবাস রয়েছে।
-                    </p>
-                    <br>
-                    <br>
+                        সালে স্থাপিত হয়। এটি ১৯৯১ সালে প্রতিষ্ঠিত হয়। প্রথম বর্ষে মাত্র 40 জন ছাত্র-ছাত্রী নিয়ে ক্লাস
+                        শুরু হয় ইলেকট্রিক্যাল টেকনোলজিতে পরবর্তীতে এখানে আরো ৬টি কোর্স চালু করা হয়। বর্তমানে মোট ৭টি
+                        টেকনোলজি নিয়ে চলছে টাঙ্গাইল পলিটেকনিক ইনস্টিটিউট। উক্ত প্রতিষ্ঠানটি টাংগাইল এর নতুন
+                        বাসস্ট্যান্ড নামক জায়গা থেকে উত্তরে হেটে ৫ মিনিট দুরত্বে অবস্থিত। টাঙ্গাইল পলিটেকনিক ইনস্টিটিউট
+                        এর ছাত্রদের জন্য ১টি এবং ছাত্রীদের জন্য ১টি আবাসিক ছাত্রাবাস রয়েছে। </p> <br> <br>
                     <h3 class="bg-text">টাঙ্গাইল পলিটেকনিক ইনস্টিটিউট বিভাগসমূহ : </h3>
-
-                    <hr>
-                    <br>
+                    <hr> <br>
                     <ul>
                         <li>Electrical Technology</li>
                         <li>Civil Engineering Technology</li>
@@ -60,131 +43,81 @@
                         <li>Construction Technology</li>
                     </ul>
                 </section>
-
                 <section class="admissions">
-
                     <h2 class="bg-text" style="text-align: center;">Admissions</h2>
-
-                    <hr>
-                    <br>
-
+                    <hr> <br>
                     <p>Tangail Polytechnic Institute offers admission to students who have passed the Secondary School
                         Certificate (SSC) examination with a minimum grade point average (GPA) of 3.00. The admission
-                        process is
-                        highly competitive and only the most qualified students are selected.</p>
-
+                        process is highly competitive and only the most qualified students are selected.</p>
                     <p>For more information on admissions, please visit our website or contact our admissions office.
                     </p>
                 </section>
-
             </main>
         </div>
-    </div>
-    <br>
-    <h1 class="bg-text" style="color: white;">Location of Tangail Polytechnic Institute</h1>
-    <br>
-    <div style="text-align: center;">
-        <iframe
+    </div> <br>
+    <h1 class="bg-text" style="color: white;">Location of Tangail Polytechnic Institute</h1> <br>
+    <div style="text-align: center;"> <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3120.84083556367!2d89.91830427713107!3d24.275524099999988!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39fdfbd757d45253%3A0x908290688169baf7!2sTangail%20Polytechnic%20Institute%2CTangail!5e1!3m2!1sen!2sbd!4v1700115617546!5m2!1sen!2sbd"
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
-    <br>
+            referrerpolicy="no-referrer-when-downgrade"></iframe> </div> <br>
     <div style="text-align: center;">
         <section class="contact" style="text-align: center;">
-
             <h1 class="bg-text" style="color: white;">Contact Us</h1>
-
-            <hr>
-            <br>
-            <p>Tangail Polytechnic Institute<br>
-                0.6 kilometers (0.37 mi) north of Tangail center new bus terminal<br>
-                Eastern side of Tangail - Mymensingh road<br>
-                Tangail, Bangladesh<br>
-                Phone: +880-2-9123-4567<br>
-                Email: info@tpi.edu.bd</p>
+            <hr> <br>
+            <p>Tangail Polytechnic Institute<br> 0.6 kilometers (0.37 mi) north of Tangail center new bus terminal<br>
+                Eastern side of Tangail - Mymensingh road<br> Tangail, Bangladesh<br> Phone: +880-2-9123-4567<br> Email:
+                info@tpi.edu.bd</p>
         </section>
     </div>
-    <div style="text-align: center;">
-        <br>
+    <div style="text-align: center;"> <br>
         <h1 class="bg-text" style="color: white;">See our videos</h1>
-        <hr>
-        <br>
-
-        <iframe width=" 560" height="315" src="https://www.youtube.com/embed/qKTXIfQal-g?si=xZSyfP0NyNr6D46t"
+        <hr> <br> <iframe width=" 560" height="315" src="https://www.youtube.com/embed/qKTXIfQal-g?si=xZSyfP0NyNr6D46t"
             title="YouTube video player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen>
-        </iframe>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/2g9KVAA27fU?si=hH589GOXGXdEUhlm"
-            title="YouTube video player" frameborder="0"
+            allowfullscreen> </iframe> <iframe width="560" height="315"
+            src="https://www.youtube.com/embed/2g9KVAA27fU?si=hH589GOXGXdEUhlm" title="YouTube video player"
+            frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen>
-        </iframe>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/L2i6P79zBU0?si=HZDsU1EDaiZJXnA6"
-            title="YouTube video player" frameborder="0"
+            allowfullscreen> </iframe> <iframe width="560" height="315"
+            src="https://www.youtube.com/embed/L2i6P79zBU0?si=HZDsU1EDaiZJXnA6" title="YouTube video player"
+            frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen>
-        </iframe>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/a-xGOYKHYWY?si=4Tl-dJ78fynV_Rx_"
-            title="YouTube video player" frameborder="0"
+            allowfullscreen> </iframe> <iframe width="560" height="315"
+            src="https://www.youtube.com/embed/a-xGOYKHYWY?si=4Tl-dJ78fynV_Rx_" title="YouTube video player"
+            frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen>
-        </iframe>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/jvKU3JfUSpE?si=zAqvOPCVwb09wX8i"
-            title="YouTube video player" frameborder="0"
+            allowfullscreen> </iframe> <iframe width="560" height="315"
+            src="https://www.youtube.com/embed/jvKU3JfUSpE?si=zAqvOPCVwb09wX8i" title="YouTube video player"
+            frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen>
-        </iframe>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/EOy27129awA?si=W4FdvOdhxGoKuklT"
-            title="YouTube video player" frameborder="0"
+            allowfullscreen> </iframe> <iframe width="560" height="315"
+            src="https://www.youtube.com/embed/EOy27129awA?si=W4FdvOdhxGoKuklT" title="YouTube video player"
+            frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen>
-        </iframe>
+            allowfullscreen> </iframe>
     </div>
     <footer>
-        <div class="footer-links">
-            <a>Home</a>
-            <a>About Us</a>
-            <a>Services</a>
-            <a>Contact</a>
-        </div>
-        <br>
+        <div class="footer-links"> <a>Home</a> <a>About Us</a> <a>Services</a> <a>Contact</a> </div> <br>
         <hr>
-        <div class="footer-social">
-            <a href="https://www.facebook.com/tpigov" target="_blank">Facebook</a>
-            <a target="_blank">Twitter</a>
-            <a target="_blank">Instagram</a>
-        </div>
-        <br>
+        <div class="footer-social"> <a href="https://www.facebook.com/tpigov" target="_blank">Facebook</a> <a
+                target="_blank">Twitter</a> <a target="_blank">Instagram</a> </div> <br>
         <hr>
         <div class="footer-options">
-
             <div>
-                <h3>Quick Links</h3>
-                <a>FAQ</a>
-                <a>Terms of Service</a>
-                <a>Privacy Policy</a>
+                <h3>Quick Links</h3> <a>FAQ</a> <a>Terms of Service</a> <a>Privacy Policy</a>
             </div>
             <hr>
             <div>
-                <h3>Support</h3>
-                <a>Customer Service</a>
-                <a>Contact Us</a>
+                <h3>Support</h3> <a>Customer Service</a> <a>Contact Us</a>
             </div>
             <hr>
             <div>
-                <h3>Connect With Us</h3>
-                <a>Newsletter</a>
-                <a>Blog</a>
+                <h3>Connect With Us</h3> <a>Newsletter</a> <a>Blog</a>
             </div>
-        </div>
-        <br>
-        <hr>
-        <br>
+        </div> <br>
+        <hr> <br>
         <p>&copy; 2023 Your Website. All Rights Reserved.</p>
     </footer>
-
 </body>
 
 </html>
