--- a/public/tpi/pages/about.html
+++ b/public/tpi/pages/about.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,34 +10,32 @@
 </head>
 
 <body>
-    <nav>
-        <a href="../../home/home.html">Home</a>
-        <a href="../../tpi/pages/teachersInfo.html">Teachers Information</a>
-        <a href="#">Contact</a>
-    </nav>
-    <br>
+    <nav> <a class="nav-logo"><img src="../../tpi/images/tpi.jpg" alt="Logo" height="55" width="55"></a> <a
+            href="../../home/home.html">Home</a> <a href="../../tpi/pages/about.html">About</a> <a
+            href="../../cst/pages/cst.html">CST</a> <a href="../../electrical/pages/electrical.html">Electrical</a> <a
+            href="../../electronic/pages/electronics.html">Electronics</a> <a
+            href="../../civil/pages/civil.html">Civil</a> <a
+            href="../../mechanical/pages/mechanical.html">Mechanical</a> <a
+            href="../../constraction/pages/constraction.html">Construction</a> <a
+            href="../../telecom/pages/telecom.html">Telecommunication</a> <a
+            href="../../tpi/pages/teachersInfo.html">Teachers</a> <a href="../../tpi/pages/students.html">Students</a>
+    </nav> <br>
     <div id="main" class="clearfix">
         <div id="content-wrapper">
             <h1 class="page-title">About Us</h1>
-            <div class="tabs">
-            </div>
+            <div class="tabs"> </div>
             <div class="pull-right print"><a href="/print/node/2" target="_blank"><span
                         class="glyphicon glyphicon-print"></span></a> </div>
             <div class="region region-content">
                 <div class="field-items">
                     <div class="field-item even" property="content:encoded">
                         <p><strong>Introduction:</strong></p>
-                        <p>Tangail polytechnic institute is one of the best polytechnic in
-                            Bangladesh.
-                            it was established in 1991 with only 40 students in the 1st year classes
-                            of
-                            diploma -in- engineering in Electrical technology with growing demands
-                            of
-                            mid level technical manpower home and abroad the institute has since
-                            greatly
-                            expanded .</p>
-                        <p>The institute now offers courses in 7 (Seven) technplogies and respective
-                            entries (1st semester/ Shift) are:&nbsp;</p>
+                        <p>Tangail polytechnic institute is one of the best polytechnic in Bangladesh. it was
+                            established in 1991 with only 40 students in the 1st year classes of diploma -in-
+                            engineering in Electrical technology with growing demands of mid level technical manpower
+                            home and abroad the institute has since greatly expanded .</p>
+                        <p>The institute now offers courses in 7 (Seven) technplogies and respective entries (1st
+                            semester/ Shift) are:&nbsp;</p>
                         <table border="1" cellpadding="1" cellspacing="1" style="width:575px">
                             <tbody>
                                 <tr>
@@ -52,9 +48,7 @@
                                 </tr>
                                 <tr>
                                     <td style="width:47px">1</td>
-                                    <td style="width:235px"><strong>Electrical Technology
-                                            (ET)</strong>
-                                    </td>
+                                    <td style="width:235px"><strong>Electrical Technology (ET)</strong> </td>
                                     <td style="width:56px">67</td>
                                     <td style="width:59px">100</td>
                                     <td style="width:74px">100</td>
@@ -62,8 +56,7 @@
                                 </tr>
                                 <tr>
                                     <td style="width:47px">2</td>
-                                    <td style="width:235px"><strong>Electronics Technology
-                                            (Ent)</strong></td>
+                                    <td style="width:235px"><strong>Electronics Technology (Ent)</strong></td>
                                     <td style="width:56px">68</td>
                                     <td style="width:59px">100</td>
                                     <td style="width:74px">100</td>
@@ -71,8 +64,7 @@
                                 </tr>
                                 <tr>
                                     <td style="width:47px">3</td>
-                                    <td style="width:235px"><strong>Computer Science &amp;
-                                            Technology(CST)</strong></td>
+                                    <td style="width:235px"><strong>Computer Science &amp; Technology(CST)</strong></td>
                                     <td style="width:56px">85</td>
                                     <td style="width:59px">100</td>
                                     <td style="width:74px">100</td>
@@ -80,8 +72,7 @@
                                 </tr>
                                 <tr>
                                     <td style="width:47px">4</td>
-                                    <td style="width:235px"><strong>Construction&nbsp;Technology
-                                            (Cont)</strong></td>
+                                    <td style="width:235px"><strong>Construction&nbsp;Technology (Cont)</strong></td>
                                     <td style="width:56px">88</td>
                                     <td style="width:59px">50</td>
                                     <td style="width:74px">50</td>
@@ -89,9 +80,7 @@
                                 </tr>
                                 <tr>
                                     <td style="width:47px">5</td>
-                                    <td style="width:235px">
-                                        <strong>Telecommunication&nbsp;Technology
-                                            (TCT)</strong>
+                                    <td style="width:235px"> <strong>Telecommunication&nbsp;Technology (TCT)</strong>
                                     </td>
                                     <td style="width:56px">94</td>
                                     <td style="width:59px">100</td>
@@ -100,8 +89,7 @@
                                 </tr>
                                 <tr>
                                     <td style="width:47px">6</td>
-                                    <td style="width:235px"><strong>Mechanical&nbsp;Technology
-                                            (MT)</strong></td>
+                                    <td style="width:235px"><strong>Mechanical&nbsp;Technology (MT)</strong></td>
                                     <td style="width:56px">70</td>
                                     <td style="width:59px">50</td>
                                     <td style="width:74px">50</td>
@@ -109,9 +97,7 @@
                                 </tr>
                                 <tr>
                                     <td style="width:47px">7</td>
-                                    <td style="width:235px"><strong>Civil&nbsp;Technology
-                                            (CT)</strong>
-                                    </td>
+                                    <td style="width:235px"><strong>Civil&nbsp;Technology (CT)</strong> </td>
                                     <td style="width:56px">64</td>
                                     <td style="width:59px">50</td>
                                     <td style="width:74px">50</td>
@@ -121,66 +107,41 @@
                         </table>
                         <h3>&nbsp;</h3>
                         <p><strong>Location:</strong></p>
-                        <p>The institute is located 1\2 kilometer distence north of Tangail center
-                            new
-                            bus terminal, easterms side, of Tangail - Mymenshingh road, in front of
-                            two
-                            other govt. offices Banbhaan of forest dept. B.A.D.C of tangail zone. in
-                            the
-                            institute premises different green trees created calm and quite
-                            environment
-                            and natural beauty.</p>
+                        <p>The institute is located 1\2 kilometer distence north of Tangail center new bus terminal,
+                            easterms side, of Tangail - Mymenshingh road, in front of two other govt. offices Banbhaan
+                            of forest dept. B.A.D.C of tangail zone. in the institute premises different green trees
+                            created calm and quite environment and natural beauty.</p>
                         <p>&nbsp;</p>
                         <p><strong>Mission:</strong></p>
-                        <p>The mission of&nbsp;<strong>Tangail Polytechnic
-                                Institute</strong>&nbsp;is
-                            absolute commitment to the highest btainable standard of quality service
-                            through excellence and concerted efforts of customers, employees and
-                            shareholders at all levels of corporate activity in the use of
-                            organizational science and knowledge to solve real life business
-                            problems.
-                        </p>
+                        <p>The mission of&nbsp;<strong>Tangail Polytechnic Institute</strong>&nbsp;is absolute
+                            commitment to the highest btainable standard of quality service through excellence and
+                            concerted efforts of customers, employees and shareholders at all levels of corporate
+                            activity in the use of organizational science and knowledge to solve real life business
+                            problems. </p>
                         <p>&nbsp;</p>
                         <p><strong>Vission:</strong></p>
-                        <p>Technical Education are extremely important in improving and progressing
-                            a
-                            nation's industries while supplying a capable work force. The vision of
-                            Tangail Polytechnic Institute is to the highest obtainable standard of
-                            quality service through excellence and concerted efforts of customers,
-                            employees and shareholders at all levels of corporate activity in the
-                            use of
-                            organizational science and knowledge to solve real life business
-                            problems.
-                        </p>
+                        <p>Technical Education are extremely important in improving and progressing a nation's
+                            industries while supplying a capable work force. The vision of Tangail Polytechnic Institute
+                            is to the highest obtainable standard of quality service through excellence and concerted
+                            efforts of customers, employees and shareholders at all levels of corporate activity in the
+                            use of organizational science and knowledge to solve real life business problems. </p>
                         <p>&nbsp;</p>
-                        <p>The education that concerns with the professionalism is called Technical
-                            education. This education deals practically in the field of trade,
-                            commerce,
-                            agriculture, medicine &amp; Engineering. For above purpose Tangail
-                            polytechnic was established in 1991 under the executive control of the
-                            ministry of education, Government of the peoples Republic of Bangladesh.
-                            It
-                            is acting through the Directorate of technical Education. The academic
-                            programs function under the regulation of the Bangladesh Technical
-                            education
-                            board.</p>
+                        <p>The education that concerns with the professionalism is called Technical education. This
+                            education deals practically in the field of trade, commerce, agriculture, medicine &amp;
+                            Engineering. For above purpose Tangail polytechnic was established in 1991 under the
+                            executive control of the ministry of education, Government of the peoples Republic of
+                            Bangladesh. It is acting through the Directorate of technical Education. The academic
+                            programs function under the regulation of the Bangladesh Technical education board.</p>
                     </div>
                 </div>
             </div>
-
         </div>
-
-    </div>
-    <br>
-    <h1 class="bg-text" style="color: black; text-align: center;">Location of Tangail Polytechnic Institute</h1>
-    <br>
-    <div style="text-align: center;">
-        <iframe
+    </div> <br>
+    <h1 class="bg-text" style="color: black; text-align: center;">Location of Tangail Polytechnic Institute</h1> <br>
+    <div style="text-align: center;"> <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3120.84083556367!2d89.91830427713107!3d24.275524099999988!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39fdfbd757d45253%3A0x908290688169baf7!2sTangail%20Polytechnic%20Institute%2CTangail!5e1!3m2!1sen!2sbd!4v1700115617546!5m2!1sen!2sbd"
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
-    <br>
+            referrerpolicy="no-referrer-when-downgrade"></iframe> </div> <br>
 </body>
 
 </html>
