--- a/public/tpi/pages/teachersInfo.html
+++ b/public/tpi/pages/teachersInfo.html
@@ -9,44 +9,31 @@
 </head>
 
 <body>
-    <nav>
-        <a class="nav-logo"><img src="../../tpi/images/tpi.jpg" alt="Logo" height="55" width="55"></a>
-        <a href="../../home/home.html">Home</a>
-        <a href="../../tpi/pages/about.html">About</a>
-        <a href="#">Electrical</a>
-        <a href="#">Civil</a>
-        <a href="#">Mechanical</a>
-        <a href="#">Construction</a>
-        <a href="../cst/pages/cst.html">CST</a>
-        <a href="#">Telecommunication</a>
-        <a href="../../tpi/pages/teachersInfo.html">Teachers</a>
-
+    <nav> <a class="nav-logo"><img src="../../tpi/images/tpi.jpg" alt="Logo" height="55" width="55"></a> <a
+            href="../../home/home.html">Home</a> <a href="../../tpi/pages/about.html">About</a> <a
+            href="../../cst/pages/cst.html">CST</a> <a href="../../electrical/pages/electrical.html">Electrical</a> <a
+            href="../../electronic/pages/electronics.html">Electronics</a> <a
+            href="../../civil/pages/civil.html">Civil</a> <a
+            href="../../mechanical/pages/mechanical.html">Mechanical</a> <a
+            href="../../constraction/pages/constraction.html">Construction</a> <a
+            href="../../telecom/pages/telecom.html">Telecommunication</a> <a
+            href="../../tpi/pages/teachersInfo.html">Teachers</a> <a href="../../tpi/pages/students.html">Students</a>
     </nav>
     <div id="main" class="clearfix">
-
-        <div class="tabs">
-        </div>
-
+        <div class="tabs"> </div>
         <div class="accessibilityDesign" id="accessibilityDesign" title="Font Color &amp; Size Changing Option"
-            style="background-color:#405DA9;">
-
-        </div>
+            style="background-color:#405DA9;"> </div>
         <div class="pull-right print"><a href="/print/teacher-list/3" target="_blank"><span
                     class="glyphicon glyphicon-print"></span></a> </div>
-
         <div class="region region-content">
             <div id="block-system-main" class="block block-system clearfix">
-
-
                 <div class="content">
-                    <div class="view-content">
-                        <iframe frameborder="0" src="https://rg-bd.com/tpi-teacher-list.php?t=1&amp;id=1"
-                            style="width:100%; height:2000px;"></iframe>
-                    </div>
+                    <div class="view-content"> <iframe frameborder="0"
+                            src="https://rg-bd.com/tpi-teacher-list.php?t=1&amp;id=1"
+                            style="width:100%; height:2000px;"></iframe> </div>
                 </div>
             </div>
         </div>
-
     </div>
 </body>
 
