--- a/public/telecom/pages/telecom.html
+++ b/public/telecom/pages/telecom.html
@@ -5,24 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CST Department</title>
-    <link rel="stylesheet" href="../css/cst_style.css">
+    <link rel="stylesheet" href="../../cst/css/cst_style.css">
     <link rel="stylesheet" href="../../tpi/css/nav.css">
 </head>
 
 <body>
     <nav> <a class="nav-logo"><img src="../../tpi/images/tpi.jpg" alt="Logo" height="55" width="55"></a> <a
-            href="../../home/home.html">Home</a> <a href="../../tpi/pages/about.html">About</a> <a>CST</a> <a
-            href="../../electrical/pages/electrical.html">Electrical</a> <a
+            href="../../home/home.html">Home</a> <a href="../../tpi/pages/about.html">About</a> <a
+            href="../../cst/pages/cst.html">CST</a> <a href="../../electronic/pages/electronics.html">Electrical</a> <a
             href="../../electronic/pages/electronics.html">Electronics</a> <a
             href="../../civil/pages/civil.html">Civil</a> <a
             href="../../mechanical/pages/mechanical.html">Mechanical</a> <a
-            href="../../constraction/pages/constraction.html">Construction</a> <a
-            href="../../telecom/pages/telecom.html">Telecommunication</a> <a
-            href="../../tpi/pages/teachersInfo.html">Teachers</a> <a href="../../tpi/pages/students.html">Students</a>
-    </nav>
+            href="../../constraction/pages/constraction.html">Construction</a> <a>Telecommunication</a> <a
+            href="../../tpi/pages/teachersInfo.html">Teachers</a> </nav>
     <div class="full_container"> <img class="bg-image" src="../img/s1.jpg" alt="Snow" style="width:100%;">
         <div class="centered">
-            <h1 class=".bg-text" style="text-shadow: 4px 4px 6px #000000;;"> Welcome to Computer Science & Technology
+            <h1 class=".bg-text" style="text-shadow: 4px 4px 6px #000000;;"> Welcome to Telecommunication Technology
             </h1>
         </div>
     </div>
@@ -91,7 +89,7 @@
             <div id="block-system-main" class="block block-system clearfix">
                 <div class="content">
                     <div class="view-content"> <iframe frameborder="0"
-                            src="https://rg-bd.com/tpi-teacher-list.php?t=1&amp;id=1"
+                            src="https://rg-bd.com/tpi-teacher-list.php?t=3&amp;id=1"
                             style="width:100%; height:2000px;"></iframe> </div>
                 </div>
             </div>
