--- a/public/tpi/pages/students.html
+++ b/public/tpi/pages/students.html
@@ -9,22 +9,16 @@
 </head>
 
 <body>
-    <nav>
-        <a class="nav-logo"><img src="../../tpi/images/tpi.jpg" alt="Logo" height="55" width="55"></a>
-        <a href="../../home/home.html">Home</a>
-        <a href="../../tpi/pages/about.html">About</a>
-        <a href="#">Electrical</a>
-        <a href="#">Civil</a>
-        <a href="#">Mechanical</a>
-        <a href="#">Construction</a>
-        <a href="../../cst/pages/cst.html">CST</a>
-        <a href="#">Telecommunication</a>
-        <a href="../../tpi/pages/teachersInfo.html">Teachers</a>
-
-
-    </nav>
-    <br>
-    <iframe frameborder="0" src="https://rg-bd.com/tpi-student-list.php?t=1"
+    <nav> <a class="nav-logo"><img src="../../tpi/images/tpi.jpg" alt="Logo" height="55" width="55"></a> <a
+            href="../../home/home.html">Home</a> <a href="../../tpi/pages/about.html">About</a> <a
+            href="../../cst/pages/cst.html">CST</a> <a href="../../electrical/pages/electrical.html">Electrical</a> <a
+            href="../../electronic/pages/electronics.html">Electronics</a> <a
+            href="../../civil/pages/civil.html">Civil</a> <a
+            href="../../mechanical/pages/mechanical.html">Mechanical</a> <a
+            href="../../constraction/pages/constraction.html">Construction</a> <a
+            href="../../telecom/pages/telecom.html">Telecommunication</a> <a
+            href="../../tpi/pages/teachersInfo.html">Teachers</a> <a href="../../tpi/pages/students.html">Students</a>
+    </nav> <br> <iframe frameborder="0" src="https://rg-bd.com/tpi-student-list.php?t=1"
         style="width:100%; height:2000px;"></iframe>
 </body>
 
